# cyberdog2_ros2_galactic

./: .gitignore  .gitmodules  1.sh  README.md  authorized_keys  camera_test.py  cmd  cmd.sh  cyberdog_my_launch.service  picture.txt  run.sh  test  tree.txt
audio_demos/: CMakeLists.txt  README.md  package.xml
audio_demos/include/: set_mic.hpp  set_voice.hpp  set_waken_words.hpp  talk.hpp
audio_demos/log/: latest_build
audio_demos/src/: set_mic.cpp  set_voice.cpp  set_waken_words.cpp  talker.cpp
audio_test/: cmd.sh  package.xml  setup.cfg  setup.py
audio_test/audio_test/: audio_t.py
camera_picture/: cmd.sh  package.xml  setup.cfg  setup.py
camera_picture/camera_picture/: pictures.py
cyberdog_bringup/: CMakeLists.txt  README.md  automatic.cmake  package.xml
cyberdog_bringup/automatic/: bringup.yaml  launch.yaml  node.yaml
cyberdog_bringup/bringup/: manual.py
cyberdog_bringup/config/: test.yaml
cyberdog_bringup/doc/: cyberdog_bringup_cn.md  cyberdog_bringup_en.md
grpc_demo/: README.md  cmd.sh  cyberdog_app_pb2.py  cyberdog_app_pb2_grpc.py  grpc_cerate_map.py  grpc_cerate_map2.py  grpc_motion_cmd.py  grpc_teleop.py  grpc_teleop2.py  grpc_teleop_yuan.py  speak.py  test.py
grpc_demo/cert/: client-cert.pem  client-key.pem
hk/: Ptz_Camera_Lib.py  test.py  test2.py  test22.py  test_main.py  test_main_play.py
loco_hl_example/: .gitignore  README.md  README_en.md
loco_hl_example/basic_motion/: main.py  robot_control_cmd_lcmt.py
loco_hl_example/customized_gait/: Gait_Def_moonwalk.toml  Gait_Params_moonwalk.toml  Usergait_List.toml  file_send_lcmt.py  main.py
loco_hl_example/scripts/: auto_lcm_init.sh
loco_hl_example/sequential_motion/: cyberdog2_ctrl.toml  main.py  robot_control_response_lcmt.py
motion_action/: CMakeLists.txt
motion_action/install/: local_setup.sh  setup.sh  setup.zsh
motion_action/launch/: test_as_manager.py
motion_action/log/: latest_build
motion_action/preset/: 121.toml  122.toml  125.toml  128.toml  130.toml  133.toml  135.toml  212.toml  302.toml  303.toml  305.toml  400.toml  user_gait_400.toml
motion_action/scripts/: motion_teleop.py  motion_units.py  pose_teleop.py
motion_action/src/: motion_action.cpp
motion_action/test/: client_test.cpp  controller_test.cpp  manager_test.cpp
motion_action2/: CMakeLists.txt  package.xml
motion_action2/launch/: test_as_manager.launch  test_as_manager.py
motion_action2/preset/: 0.toml  124.toml  132.toml  134.toml  138.toml  141.toml  201.toml
motion_action2/scripts/: motion_demo.py  statistics.py
motion_action2/src/: motion_action2.cpp
motion_action2/test/: client_test.cpp  publisher_test.cpp
motion_utils/: CMakeLists.txt
motion_utils/test/: stair_perception.cpp  stair_perception_test.cpp
moto_contor_test/: CMakeLists.txt
moto_contor_test/install/: local_setup.sh  setup.sh
moto_contor_test/log/: latest_build
moto_contor_test/src/: contor_led.cpp
my_interface/: CMakeLists.txt  cmd.sh  package.xml
my_interface/srv/: PtzCam.srv
my_launch/: cmd.sh  package.xml  setup.cfg  setup.py
my_launch/my_launch/: __init__.py  manual.py  my_run.launch.py  my_test.launch.py  my_wifi_ip.launch.py
my_weakup/: package.xml  setup.cfg  setup.py
my_weakup/my_weakup/: my_weakup.py
my_weakup/test/: test.py  test.sh
nav2_demo/: README.md  cmd.sh
nav2_test/: cmd.sh  package.xml  setup.cfg  setup.py
nav2_test/nav2_test/: nav2_test.py  nav2_test2.py
pcl_1_10/lib/: libpcl_common.so.1.10  libpcl_common.so.1.10.0  (+31 more)
ptz_camera/: cmd.sh  package.xml  setup.cfg  setup.py
service/: README.md  cyberdog_my_run_launch.service  hk_service.sh  kh_service.py  kh_service.sh
skin_manager/: CMakeLists.txt  package.xml
stair_find/: CMakeLists.txt  package.xml
talk_something/: .gitignore  CMakeLists.txt  package.xml
talk_something/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
talk_something/install/talk_something/lib/talk_something/: talks_node
talk_something/install/talk_something/share/ament_index/resource_index/package_run_dependencies/: talk_something
talk_something/install/talk_something/share/ament_index/resource_index/parent_prefix_path/: talk_something
talk_something/install/talk_something/share/talk_something/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
talk_something/install/talk_something/share/talk_something/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  talk_somethingConfig.cmake
talk_something/log/: latest_build
talk_something/src/: talkers copy.cpp  talkers.cpp
test_opencv_c++/: CMakeLists.txt  test.py
test_opencv_c++/include/: DataType.h  DecodeCardSdk.h  HCNetSDK.h  LinuxPlayM4.h  iniFile.h  plaympeg4.h
test_opencv_c++/src/: Device.ini  main copy.cpp  main.cpp
wifi_ip/: cmd.sh  package.xml  setup.cfg  setup.py
wifi_test/: package.xml  setup.cfg  setup.py
海康威视摄像机接口模型文件/: README.md  hikvision_backup-底座.SLDPRT  hikvision_backup-底座.STL  hikvision_backup-接口.SLDPRT  hikvision_backup-接口.STL
(+81 files in other folders)
